--- a/main.html
+++ b/main.html
@@ -4,68 +4,71 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
-
-	
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-
-	
+	<div>
+		<button data-ns-test="block-inline-button">Test1</button>
+		<button data-ns-test="block-inline-button">Test2</button>
+		Answer: Inline
+	</div>
+ 
+	<div>
+		<div data-ns-test="block-inline-div">Test1</div>
+		<div data-ns-test="block-inline-div">Test2</div>
+		Answer: Block
+	</div>
+ 
+	<div>
+		<span data-ns-test="block-inline-span">Test1</span>
+		<span data-ns-test="block-inline-span">Test2</span>
+		Answer: Inline
+	</div>
+ 
+	<div>
+		<p data-ns-test="block-inline-p">Test1</p>
+		<p data-ns-test="block-inline-p">Test2</p>
+		Answer: Block
+	</div>
+ 
+	<div>
+		<input data-ns-test="block-inline-input">Test1</input>
+		<input data-ns-test="block-inline-input">Test2</input>
+		Answer: Inline
+	</div>
+ 
+	<div>
+		<cite data-ns-test="block-inline-cite">Test1</cite>
+		<cite data-ns-test="block-inline-cite">Test2</cite>
+		Answer: Inline
+	</div>
+ 
+	<div>
+		<code data-ns-test="block-inline-code">Test1</code>
+		<code data-ns-test="block-inline-code">Test2</code>
+		Answer: Inline
+	</div>
+ 
+	<div>
+		<h1 data-ns-test="block-inline-h1">Test1</h1>
+		<h1 data-ns-test="block-inline-h1">Test2</h1>
+		<p>Answer: Block</p>
+	</div>
+ 
+	<div>
+		<sup data-ns-test="block-inline-sup">Test1</sup>
+		<sup data-ns-test="block-inline-sup">Test2</sup>
+		Answer: Inline
+	</div>
+ 
+	<div>
+		<sub data-ns-test="block-inline-sub">Test1</sub>
+		<sub data-ns-test="block-inline-sub">Test2</sub>
+		Answer: Inline
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
-
-
-	<div data-ns-test="block-inline-sub"> 
-  <sub>Test1</sub> 
-  <sub>Test2</sub> 
-  Answer: Inline 
-</div>
-<div data-ns-test="block-inline-sup"> 
-  <sup>Test1</sup> 
-  <sup>Test2</sup> 
-  Answer: Inline 
-</div>
-<div data-ns-test="block-inline-h1"> 
-  <h1>Test1</h1> 
-  <h1>Test2</h1> 
-  Answer: Block 
-</div>
-<div data-ns-test="block-inline-code"> 
-  <code>Test1</code> 
-  <code>Test2</code> 
-  Answer: Inline 
-</div>
-<div data-ns-test="block-inline-cite"> 
-  <cite>Test1</cite> 
-  <cite>Test2</cite> 
-  Answer: Inline 
-</div>
-<div data-ns-test="block-inline-input"> 
-  <input type="text" value="Test1"> 
-  <input type="text" value="Test2"> 
-  Answer: Inline 
-</div>
-<div data-ns-test="block-inline-p"> 
-  <p>Test1</p> 
-  <p>Test2</p> 
-  Answer: Block 
-</div>
-<div data-ns-test="block-inline-span"> 
-  <span>Test1</span> 
-  <span>Test2</span> 
-  Answer: Inline 
-</div>
-<div data-ns-test="block-inline-div"> 
-  <div>Test1</div> 
-  <div>Test2</div> 
-  Answer: Block 
-</div>
-<div data-ns-test="block-inline-button"> 
-  <button>Test1</button> 
-  <button>Test2</button> 
-  Answer: Inline 
-</div>
 
 </body>
 
